--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: America/Sao_Paulo
 
 title: Daniel Veiga # the main title
 
-tagline: Hi! I'm a Computer Engineer from Brazil # it will display as the subtitle
+tagline: Hi! I'm a Computer Engineer from Brazil and this is my blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  Hi! I'm a Computer Engineer from Brazil
+  Hi! I'm a Computer Engineer from Brazil and this is my blog
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -108,7 +108,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -118,13 +118,13 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: danielveigasilva/danielveigasilva.github.io
+    repo_id: R_kgDOOAcjPA
+    category: Announcements
+    category_id: DIC_kwDOOAcjPM4CnagI
     mapping: # optional, default to 'pathname'
     strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
+    input_position: top
     lang: # optional, default to the value of `site.lang`
     reactions_enabled: # optional, default to the value of `1`
 
