--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,14 @@
 # Import the theme
 theme: jekyll-theme-chirpy
 
+plugins:
+  - jekyll-polyglot
+
+languages: ["en", "pt-BR"]
+default_lang: "en"
+exclude_from_localization: ["javascript", "images", "css", "public", "sitemap"]
+parallel_localization: true
+
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
@@ -16,10 +24,9 @@ timezone: America/Sao_Paulo
 
 title: Daniel Veiga # the main title
 
-tagline: Hi! I'm a Computer Engineer from Brazil and this is my blog # it will display as the subtitle
+tagline:
 
-description: >- # used by seo meta and the atom feed
-  Hi! I'm a Computer Engineer from Brazil and this is my blog
+description:
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -205,15 +212,15 @@ compress_html:
     envs: [development]
 
 exclude:
-  - "*.gem"
-  - "*.gemspec"
+  #- "*.gem"
+  #- "*.gemspec"
   - docs
   - tools
   - README.md
   - LICENSE
   - purgecss.js
   - rollup.config.js
-  - "package*.json"
+  #- "package*.json"
 
 jekyll-archives:
   enabled: [categories, tags]
